<resources>
    <string name="app_name">GitHubUser</string>
    <string name="search">Search</string>
    <string name="search_hint">Masukkan kata</string>
    <string name="name_placeholder">Nama User</string>
    <string name="username_placeholder">Username User</string>
    <string name="followers_placeholder">followers</string>
    <string name="following_placeholder">following</string>
    <string name="followers">%d followers</string>
    <string name="following">%d following</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_text_1">FOLLOWERS</string>
    <string name="tab_text_2">FOLLOWING</string>
    <string name="tab_placeholder">tab layout</string>
    <string name="favorite">Favorite</string>

</resources>