<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSecondary">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profile_picture"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/potrait_placeholder"
            android:layout_margin="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_placeholder"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/iv_profile_picture"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="15dp"/>

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username_placeholder"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/followers_placeholder"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_following"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:layout_marginStart="0dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="100dp"/>

        <TextView
            android:id="@+id/tv_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/following_placeholder"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_username"
            app:layout_constraintStart_toEndOf="@+id/tv_followers"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline_vertical_center"
            tools:visibility="visible" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorSecondary"
            app:tabSelectedTextColor="?attr/colorOnSecondary"
            app:tabIndicatorColor="?attr/colorOnSecondary"
            app:layout_constraintTop_toBottomOf="@+id/tv_following"
            android:contentDescription="@string/tab_placeholder"/>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/tabs"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>